Code frontend Code Backend Code Styles

--- a/index.html
+++ b/index.html
@@ -1,13 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="calculator.js"></script>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
     <title>Odin Calculator</title>
-</head>
-<body>
-    
-</body>
+    <style>
+      @import url("https://fonts.cdnfonts.com/css/new-gothic-style");
+    </style>
+  </head>
+  <body>
+    <div id="container">
+      <h1 id="cal-head">R<span style="color: #d90429">i</span>p</h1>
+      <div id="cal-display">123456</div>
+      <div id="btns">
+        <button class="rounded-btns tp-btns">,</button>
+        <button class="rounded-btns tp-btns">(</button>
+        <button class="rounded-btns tp-btns">)</button>
+        <button class="rounded-btns oper">/</button>
+        <button class="rounded-btns">7</button>
+        <button class="rounded-btns">8</button>
+        <button class="rounded-btns">9</button>
+        <button class="rounded-btns oper">X</button>
+        <button class="rounded-btns">4</button>
+        <button class="rounded-btns">5</button>
+        <button class="rounded-btns">6</button>
+        <button class="rounded-btns oper">-</button>
+        <button class="rounded-btns">1</button>
+        <button class="rounded-btns">2</button>
+        <button class="rounded-btns">3</button>
+        <button class="rounded-btns oper">+</button>
+        <button class="rounded-btns">0</button>
+        <button class="rounded-btns">.</button>
+        <button class="rounded-btns">( - )</button>
+        <button class="rounded-btns oper">=</button>
+      </div>
+      <h2 id="trademark">Pollen.</h2>
+    </div>
+  </body>
 </html>
