--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div id="container">
       <h1 id="cal-head">R<span style="color: #d90429">i</span>p</h1>
-      <input type="text" id="cal-display"></input>
+      <input type="text" id="cal-display" disabled></input>
       <div id="btns">
         <button id="clear" class="rounded-btns tp-btns">C</button>
         <button id="paren-open" class="rounded-btns tp-btns">(</button>
